frontend/test/should_pass/abstract_replace_parameter.gm
abstract node class AbstractNode;
node class NonAbstractNode extends AbstractNode;
