frontend/test/should_fail/inh_model_006.gm
edge class A extends A;
